# ByTekTask

./: pyproject.toml
bytek_task/api/: circuit_breakers.py  handler.py  input_validator.py  main.py  rate_limiters.py
bytek_task/api/model/: logistic_regression_model.pkl
bytek_task/docker/: Dockerfile
bytek_task/predictive_model/: log_regression.py  xgboost_model.py
bytek_task/predictive_model/models/: xgboost.pkl
bytek_task/syntethic_data/: data_generation.py  distribution_analysis.py
